--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
 </head>
 <body>
-  <h1>World Geography Trivia</h1>
+
+  <div class="container">
+    <h1>World Geography Trivia</h1>
+
+    <!--Start Button-->
+    <div id="startButton">Start</div>
+  </div>
 
 
-  <p>What was the last country/nation/UN member state founded?</p>
-
-
-
-
-  Congrat
 </body>
 </html>
