--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>World Geography Trivia</title>
 <!-- javascript, CSS and Bootstrap links -->
-  <script src="assets/javascript/app.js"></script>
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
 </head>
@@ -14,11 +13,14 @@
 
   <div class="container">
     <h1>World Geography Trivia</h1>
-
     <!--Start Button-->
     <div id="startButton">Start</div>
+    
   </div>
 
 
+<!--Jquery and local Javascript links-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="assets/javascript/app.js"></script>
 </body>
 </html>
