--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>World Geography Trivia</title>
 <!-- javascript, CSS and Bootstrap links -->
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  -->
 </head>
 <body>
 
   <div class="container">
-    <h1>World Geography Trivia</h1>
+    <h1>World History Trivia</h1>
     <!--Start Button-->
-    <div id="startButton">Start</div>
-    
+    <button id="startButton">Start</button>
+
   </div>
 
 
