--- a/index.html
+++ b/index.html
@@ -12,10 +12,27 @@
 <body>
 
   <div class="container">
-    <h1>World History Trivia</h1>
-    <!--Start Button-->
-    <button id="startButton">Start</button>
-
+    <div id="startScreen"
+      <h1>World History Trivia</h1>
+      <!--Start Button-->
+      <button id="startButton">Start</button>
+    </div>
+    <div id="gameScreen">
+      <div id="qOne">
+      </div>
+      <div id="qTwo">
+      </div>
+      <div id="qThree">
+      </div>
+      <div id="qFour">
+      </div>
+      <div id="qFive">
+      </div>
+      <div id="qSix">
+      </div>
+      <div id="qSeven">
+      </div>
+    </div>
   </div>
 
 
