--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>World Geography Trivia</title>
 <!-- javascript, CSS and Bootstrap links -->
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">  -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
 </head>
 <body>
 
   <div class="container">
-    <div id="startScreen"
+    <div id="startScreen">
       <h1>World History Trivia</h1>
       <!--Start Button-->
       <button id="startButton">Start</button>
