--- a/index.html
+++ b/index.html
@@ -26,47 +26,62 @@
     <div class="row" id="gameScreen">
       <div class="col-md-3"></div>
       <div class="col-md-6" id="gameText">
-        <h4>Time left: <span id="timeRemaining"></span></h4>
+        <p>Time left: <span id="timeRemaining"></span></p>
         <div id="qOne">
-          <p>First Question </p>
+          <h6>First Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male<br>
-            <input type="radio" value="female"> Female<br>
+            <input type="radio" value="male" checked> Male
+            <input type="radio" value="female"> Female
             <input type="radio" value="other"> Other
-          </form>
+          </form><br>
         </div>
         <div id="qTwo">
-          <p>Second Question</p>
+          <h6>Second Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male<br>
-            <input type="radio" value="female"> Female<br>
+            <input type="radio" value="male" checked> Male
+            <input type="radio" value="female"> Female
             <input type="radio" value="other"> Other
-          </form>
+          </form><br>
         </div>
         <div id="qThree">
-          <p>Third Question</p>
+          <h6>Third Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male<br>
-            <input type="radio" value="female"> Female<br>
-            <input type="radio" value="other"> Other<br>
-          </form>
+            <input type="radio" value="male" checked> Male
+            <input type="radio" value="female"> Female
+            <input type="radio" value="other"> Other
+          </form><br>
         </div>
         <div id="qFour">
           <p>Fourth Question</p>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male<br>
-            <input type="radio" value="female"> Female<br>
-            <input type="radio" value="other"> Other<br>
-          </form>
+            <input type="radio" value="male" checked> Male
+            <input type="radio" value="female"> Female
+            <input type="radio" value="other"> Other
+          </form><br>
         </div>
         <div id="qFive">
-          <p>Fifth Question</p>
+          <h6>Fifth Question</h6>
+          <form class = "choices">
+              <input type="radio" value="male" checked> Male
+              <input type="radio" value="female"> Female
+              <input type="radio" value="other"> Other
+            </form><br>
         </div>
         <div id="qSix">
-          <p>Sixth Question</p>
+          <h6>Sixth Question</h6>
+          <form class = "choices">
+            <input type="radio" value="male" checked> Male
+            <input type="radio" value="female"> Female
+            <input type="radio" value="other"> Other
+          </form><br>
         </div>
         <div id="qSeven">
-          <p>Seventh Question</p>
+          <h6>Seventh Question</h6>
+          <form class = "choices">
+              <input type="radio" value="male" checked> Male
+              <input type="radio" value="female"> Female
+              <input type="radio" value="other"> Other
+            </form><br>
         </div>
         <button id="submitButton">Submit</button>
       </div>
