--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row" id="gameScreen">
       <div class="col-md-3"></div>
       <div class="col-md-6" id="gameText">
-        <p>Time left: <span id="timeRemaining"></span></p>
+        <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
           <h6>First Question</h6>
           <form class = "choices">
