--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="container">
 
       <!--Starting Screen-->
+      <div class="row"><br></div>
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6" id="startScreen">
@@ -46,15 +47,15 @@
         <div id="qThree">
           <h6>Third Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male
-            <input type="radio" value="female"> Female
-            <input type="radio" value="other"> Other
+            <input type="radio"> Male
+            <input type="radio" value="correct"> Female
+            <input type="radio"> Other
           </form><br>
         </div>
         <div id="qFour">
-          <p>Fourth Question</p>
+          <h6>Fourth Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male
+            <input type="radio" value="male"> Male
             <input type="radio" value="female"> Female
             <input type="radio" value="other"> Other
           </form><br>
@@ -62,7 +63,7 @@
         <div id="qFive">
           <h6>Fifth Question</h6>
           <form class = "choices">
-              <input type="radio" value="male" checked> Male
+              <input type="radio" value="male"> Male
               <input type="radio" value="female"> Female
               <input type="radio" value="other"> Other
             </form><br>
@@ -70,7 +71,7 @@
         <div id="qSix">
           <h6>Sixth Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male
+            <input type="radio" value="male"> Male
             <input type="radio" value="female"> Female
             <input type="radio" value="other"> Other
           </form><br>
@@ -78,11 +79,35 @@
         <div id="qSeven">
           <h6>Seventh Question</h6>
           <form class = "choices">
-              <input type="radio" value="male" checked> Male
+              <input type="radio" value="male"> Male
               <input type="radio" value="female"> Female
               <input type="radio" value="other"> Other
             </form><br>
         </div>
+        <div id="qEight">
+          <h6>Eighth Question</h6>
+          <form class = "choices">
+            <input type="radio"> Male
+            <input type="radio" value="correct"> Female
+            <input type="radio"> Other
+          </form><br>
+        </div>
+        <div id="qNine">
+          <h6>Ninth Question</h6>
+          <form class = "choices">
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
+          </form><br>
+        </div>
+        <div id="qTen">
+          <h6>Tenth Question</h6>
+          <form class = "choices">
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
+          </form><br>
+        </div>               
         <button id="submitButton">Submit</button>
       </div>
     </div>
