--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
 </head>
 <body>
-
   <div class="container">
 
       <!--Starting Screen-->
@@ -23,6 +22,7 @@
       </div>
       <div class="col-md-3"></div>
     </div>
+
       <!--Game Screen-->
     <div class="row" id="gameScreen">
       <div class="col-md-3"></div>
@@ -31,65 +31,65 @@
         <div id="qOne">
           <h6>First Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male
-            <input type="radio" value="female"> Female
-            <input type="radio" value="other"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
           </form><br>
         </div>
         <div id="qTwo">
           <h6>Second Question</h6>
           <form class = "choices">
-            <input type="radio" value="male" checked> Male
-            <input type="radio" value="female"> Female
-            <input type="radio" value="other"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
           </form><br>
         </div>
         <div id="qThree">
           <h6>Third Question</h6>
           <form class = "choices">
-            <input type="radio"> Male
-            <input type="radio" value="correct"> Female
-            <input type="radio"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
           </form><br>
         </div>
         <div id="qFour">
           <h6>Fourth Question</h6>
           <form class = "choices">
-            <input type="radio" value="male"> Male
-            <input type="radio" value="female"> Female
-            <input type="radio" value="other"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
           </form><br>
         </div>
         <div id="qFive">
           <h6>Fifth Question</h6>
           <form class = "choices">
-              <input type="radio" value="male"> Male
-              <input type="radio" value="female"> Female
-              <input type="radio" value="other"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
             </form><br>
         </div>
         <div id="qSix">
           <h6>Sixth Question</h6>
           <form class = "choices">
-            <input type="radio" value="male"> Male
-            <input type="radio" value="female"> Female
-            <input type="radio" value="other"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
           </form><br>
         </div>
         <div id="qSeven">
           <h6>Seventh Question</h6>
           <form class = "choices">
-              <input type="radio" value="male"> Male
-              <input type="radio" value="female"> Female
-              <input type="radio" value="other"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
             </form><br>
         </div>
         <div id="qEight">
           <h6>Eighth Question</h6>
           <form class = "choices">
-            <input type="radio"> Male
-            <input type="radio" value="correct"> Female
-            <input type="radio"> Other
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
+            <input type="radio" value="correct"> Correct
           </form><br>
         </div>
         <div id="qNine">
@@ -113,7 +113,7 @@
     </div>
   </div>
 <footer class="footer">
-  <div class="container-fluid text-center">
+  <div class="container-fluid vtext-center col-md-12">
       Copyright &copy; 2018 Zach Bray
   </div>
 </footer>
