--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
       <div class="row"><br></div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-6" id="startScreen">
-        <h1 id="dude">World History Trivia</h1>
+      <div class="col-md-6" id="gameContent">
+        <h1>World History Trivia</h1>
         <button id="startButton">Start</button>
       </div>
-      <div class="col-md-3"></div>
     </div>
 
       <!--Game Screen-->
     <div class="row" id="gameScreen">
       <div class="col-md-3"></div>
-      <div class="col-md-6" id="gameText">
+      <div class="col-md-6" id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
           <h6>First Question</h6>
