--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
 </head>
 <body>
   <div class="container">
-
-      <!--Starting Screen-->
-      <div class="row"><br></div>
+    <div class="row"><br></div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="col-md-6" id="gameContent">
+      <div class="jumbotron col-md-6" id="gameBanner">
         <h1>World History Trivia</h1>
         <button id="startButton">Start</button>
       </div>
     </div>
-
-      <!--Game Screen-->
     <div class="row" id="gameScreen">
       <div class="col-md-3"></div>
+      <!--Quiz Content-->
       <div class="col-md-6" id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
@@ -109,8 +106,20 @@
         </div>               
         <button id="submitButton">Submit</button>
       </div>
+      <div id="resultsContent">
+        <p>
+          <span id="winCondition"></span>
+          <br>
+          Correct Answers: <span id="numCorrect"></span><br>
+          Incorrect Answers: <span id="numIncorrect"></span><br>
+          Unanswered: <span id="numUnanswered"></span><br>
+          <button></button>
+        </p>
+      </div>
     </div>
   </div>
+
+<!-- Footer -->
 <footer class="footer">
   <div class="container-fluid vtext-center col-md-12">
       Copyright &copy; 2018 Zach Bray
