1:23pm working on results screen

--- a/index.html
+++ b/index.html
@@ -106,14 +106,17 @@
         </div>               
         <button id="submitButton">Submit</button>
       </div>
-      <div id="resultsContent">
+    </div>
+    <div id="resultsContent">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
         <p>
           <span id="winCondition"></span>
           <br>
           Correct Answers: <span id="numCorrect"></span><br>
           Incorrect Answers: <span id="numIncorrect"></span><br>
-          Unanswered: <span id="numUnanswered"></span><br>
-          <button></button>
+          Unanswered: <span id="numUnanswered"></span><br><br>
+          <button id="resetButton">Reset</button>
         </p>
       </div>
     </div>
@@ -121,7 +124,7 @@
 
 <!-- Footer -->
 <footer class="footer">
-  <div class="container-fluid vtext-center col-md-12">
+  <div class="fixed-bottom">
       Copyright &copy; 2018 Zach Bray
   </div>
 </footer>
