--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="row"><br></div>
     <div class="row">
       <div class="col-md-3"></div>
-      <div class="jumbotron col-md-6" id="gameBanner">
+      <div class="col-md-6" id="gameBanner">
         <h1>World History Trivia</h1>
         <button id="startButton">Start</button>
       </div>
@@ -106,10 +105,10 @@
         </div>               
         <button id="submitButton">Submit</button>
       </div>
+      
+      <div class="col-md-3"></div>
     </div>
     <div id="resultsContent">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
         <p>
           <span id="winCondition"></span>
           <br>
@@ -119,7 +118,6 @@
           <button id="resetButton">Reset</button>
         </p>
       </div>
-    </div>
   </div>
 
 <!-- Footer -->
