--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6" id="gameBanner">
+      <!-- <div class="col-md-3"></div> -->
+      <div id="gameBanner">
         <h1>World History Trivia</h1>
         <button id="startButton">Start</button>
       </div>
     </div>
     <div class="row" id="gameScreen">
-      <div class="col-md-3"></div>
       <!--Quiz Content-->
-      <div class="col-md-6" id="quizContent">
+      <div id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
           <h6>First Question</h6>
@@ -35,24 +34,24 @@
           <h6>Second Question</h6>
           <form class = "choices">
             <input type="radio"> Wrong
-            <input type="radio"> Wrong
             <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
           </form><br>
         </div>
         <div id="qThree">
           <h6>Third Question</h6>
           <form class = "choices">
             <input type="radio"> Wrong
-            <input type="radio"> Wrong
             <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
           </form><br>
         </div>
         <div id="qFour">
           <h6>Fourth Question</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
             <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
           </form><br>
         </div>
         <div id="qFive">
@@ -66,17 +65,17 @@
         <div id="qSix">
           <h6>Sixth Question</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
             <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
           </form><br>
         </div>
         <div id="qSeven">
           <h6>Seventh Question</h6>
           <form class = "choices">
             <input type="radio"> Wrong
-            <input type="radio"> Wrong
             <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
             </form><br>
         </div>
         <div id="qEight">
@@ -90,9 +89,9 @@
         <div id="qNine">
           <h6>Ninth Question</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
             <input type="radio" value="correct"> Correct
+            <input type="radio"> Wrong
+            <input type="radio"> Wrong
           </form><br>
         </div>
         <div id="qTen">
@@ -103,21 +102,19 @@
             <input type="radio"> Wrong
           </form><br>
         </div>               
-        <button id="submitButton">Submit</button>
+        <button id="submitButton">Submit</button><br>
+        <div id="resultsContent">
+          <p>
+            <span id="winCondition"></span>
+            <br>
+            Correct Answers: <span id="numCorrect"></span><br>
+            Incorrect Answers: <span id="numIncorrect"></span><br>
+            Unanswered: <span id="numUnanswered"></span><br><br>
+            <button id="resetButton">Reset</button>
+          </p>
+        </div>
       </div>
-      
-      <div class="col-md-3"></div>
     </div>
-    <div id="resultsContent">
-        <p>
-          <span id="winCondition"></span>
-          <br>
-          Correct Answers: <span id="numCorrect"></span><br>
-          Incorrect Answers: <span id="numIncorrect"></span><br>
-          Unanswered: <span id="numUnanswered"></span><br><br>
-          <button id="resetButton">Reset</button>
-        </p>
-      </div>
   </div>
 
 <!-- Footer -->
