Added reset functionality and first two q/a text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
-          <h6>First Question</h6>
+          <h6>When was the l</h6>
           <form class = "choices">
             <input type="radio"> Wrong
             <input type="radio"> Wrong
@@ -31,19 +31,19 @@
           </form><br>
         </div>
         <div id="qTwo">
-          <h6>Second Question</h6>
+          <h6>On what day is the United Kingdom scheduled to leave the European Union?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
+            <input type="radio">May 29th, 2019
+            <input type="radio" value="correct">March 29th, 2019
+            <input type="radio">December 31, 2019
           </form><br>
         </div>
         <div id="qThree">
-          <h6>Third Question</h6>
+          <h6>What year did the global population reach 7 billion?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
+            <input type="radio"> 2001
+            <input type="radio" value="correct"> 2011
+            <input type="radio"> 1991
           </form><br>
         </div>
         <div id="qFour">
@@ -101,7 +101,7 @@
             <input type="radio" value="correct"> Correct
             <input type="radio"> Wrong
           </form><br>
-        </div>               
+        </div>
         <button id="submitButton">Submit</button><br>
       </div>
       <div id="resultsContent">
