--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
-          <h6>When was the l</h6>
+          <h6>What was the newest country added </h6>
           <form class = "choices">
             <input type="radio"> Wrong
             <input type="radio"> Wrong
@@ -33,9 +33,9 @@
         <div id="qTwo">
           <h6>On what day is the United Kingdom scheduled to leave the European Union?</h6>
           <form class = "choices">
-            <input type="radio">May 29th, 2019
-            <input type="radio" value="correct">March 29th, 2019
-            <input type="radio">December 31, 2019
+            <input type="radio"> May 29th, 2019
+            <input type="radio" value="correct"> March 29th, 2019
+            <input type="radio"> December 31, 2019
           </form><br>
         </div>
         <div id="qThree">
