--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <div id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
-          <h6>What was the newest country added </h6>
+          <h6>What country joined the United Nations in 2011 becoming the latest to do so?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
+            <input type="radio"> South Korea
+            <input type="radio"> Vietnam
+            <input type="radio" value="correct"> South Sudan
           </form><br>
         </div>
         <div id="qTwo">
@@ -47,59 +47,59 @@
           </form><br>
         </div>
         <div id="qFour">
-          <h6>Fourth Question</h6>
+          <h6>How many current member states of the United Nations are there?</h6>
           <form class = "choices">
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
+            <input type="radio" value="correct"> 193
+            <input type="radio"> 183
+            <input type="radio"> 203
           </form><br>
         </div>
         <div id="qFive">
-          <h6>Fifth Question</h6>
+          <h6>Who is the current Prime Minister of the United Kingdom?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
+            <input type="radio"> David Cameron
+            <input type="radio"> Sadiq Khan
+            <input type="radio" value="correct"> Theresa May
             </form><br>
         </div>
         <div id="qSix">
-          <h6>Sixth Question</h6>
+          <h6>The Battle of the Bulge took place in which war?</h6>
           <form class = "choices">
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
+            <input type="radio" value="correct"> World War II
+            <input type="radio"> World War I
+            <input type="radio"> Vietman
           </form><br>
         </div>
         <div id="qSeven">
-          <h6>Seventh Question</h6>
+          <h6>Which country has the highest population?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
+            <input type="radio"> United States
+            <input type="radio" value="correct"> China
+            <input type="radio"> India
             </form><br>
         </div>
         <div id="qEight">
-          <h6>Eighth Question</h6>
+          <h6>Who was the last emperor of Rome?</h6>
           <form class = "choices">
             <input type="radio"> Wrong
             <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
+            <input type="radio" value="correct"> Romulus Augustulus
           </form><br>
         </div>
         <div id="qNine">
-          <h6>Ninth Question</h6>
+          <h6>What year was the 50th state, Hawaii, admitted to the Union?</h6>
           <form class = "choices">
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
+            <input type="radio" value="correct"> 1959
+            <input type="radio"> 1953
+            <input type="radio"> 1960
           </form><br>
         </div>
         <div id="qTen">
-          <h6>Tenth Question</h6>
+          <h6>Which ocean is the largest by surface area?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio" value="correct"> Correct
-            <input type="radio"> Wrong
+            <input type="radio"> Indian
+            <input type="radio" value="correct"> Pacific
+            <input type="radio"> Atlantic
           </form><br>
         </div>
         <button id="submitButton">Submit</button><br>
