doubled time limit to 2 minutes, finally finalized Q/A finally.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <button id="startButton">Start</button>
       </div>
     </div>
-    <div class="row" id="gameScreen">
+    <div class="row">
       <!--Quiz Content-->
-      <div id="quizContent">
+      <div class="gameScreen" id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
           <h6>What country joined the United Nations in 2011 becoming the latest to do so?</h6>
@@ -81,8 +81,8 @@
         <div id="qEight">
           <h6>Who was the last emperor of Rome?</h6>
           <form class = "choices">
-            <input type="radio"> Wrong
-            <input type="radio"> Wrong
+            <input type="radio"> Nero
+            <input type="radio"> Caligula
             <input type="radio" value="correct"> Romulus Augustulus
           </form><br>
         </div>
@@ -104,7 +104,7 @@
         </div>
         <button id="submitButton">Submit</button><br>
       </div>
-      <div id="resultsContent">
+      <div class="gameScreen" id="resultsContent">
         <p>
           <span id="winCondition"></span>
           <br>
@@ -113,6 +113,9 @@
           Unanswered: <span id="numUnanswered"></span><br><br>
           <button id="resetButton">Reset</button>
         </p>
+      </div>
+      <div class="gameScreen" id="timesUp">
+        <p></p>
       </div>
     </div>
   </div>
