gave each radio a name to limit user to one choice

--- a/index.html
+++ b/index.html
@@ -25,81 +25,81 @@
         <div id="qOne">
           <h6>What country joined the United Nations in 2011 becoming the latest to do so?</h6>
           <form class = "choices">
-            <input type="radio">  South Korea  
-            <input type="radio">  Vietnam  
-            <input type="radio" value="correct"> South Sudan  
+            <input type="radio" name="q1">  South Korea  
+            <input type="radio" name="q1">  Vietnam  
+            <input type="radio" name="q1" value="correct"> South Sudan  
           </form><br>
         </div>
         <div id="qTwo">
           <h6>On what day is the United Kingdom scheduled to leave the European Union?</h6>
           <form class = "choices">
-            <input type="radio"> May 29th, 2019
-            <input type="radio" value="correct"> March 29th, 2019
-            <input type="radio"> December 31, 2019
+            <input type="radio" name="q2"> May 29th, 2019
+            <input type="radio" name="q2"value="correct"> March 29th, 2019
+            <input type="radio" name="q2"> December 31, 2019
           </form><br>
         </div>
         <div id="qThree">
           <h6>What year did the global population reach 7 billion?</h6>
           <form class = "choices">
-            <input type="radio"> 2001
-            <input type="radio" value="correct"> 2011
-            <input type="radio"> 1991
+            <input type="radio" name="q3"> 2001
+            <input type="radio" name="q3" value="correct"> 2011
+            <input type="radio" name="q3"> 1991
           </form><br>
         </div>
         <div id="qFour">
           <h6>How many current member states of the United Nations are there?</h6>
           <form class = "choices">
-            <input type="radio" value="correct"> 193
-            <input type="radio"> 183
-            <input type="radio"> 203
+            <input type="radio" name="q4" value="correct"> 193
+            <input type="radio" name="q4"> 183
+            <input type="radio" name="q4"> 203
           </form><br>
         </div>
         <div id="qFive">
           <h6>Who is the current Prime Minister of the United Kingdom?</h6>
           <form class = "choices">
-            <input type="radio"> David Cameron
-            <input type="radio"> Sadiq Khan
-            <input type="radio" value="correct"> Theresa May
+            <input type="radio" name="q5"> David Cameron
+            <input type="radio" name="q5"> Sadiq Khan
+            <input type="radio" name="q5" value="correct"> Theresa May
             </form><br>
         </div>
         <div id="qSix">
           <h6>The Battle of the Bulge took place in which war?</h6>
           <form class = "choices">
-            <input type="radio" value="correct"> World War II
-            <input type="radio"> World War I
-            <input type="radio"> Vietman
+            <input type="radio" name="q6" value="correct"> World War II
+            <input type="radio" name="q6"> World War I
+            <input type="radio" name="q6"> Vietman
           </form><br>
         </div>
         <div id="qSeven">
           <h6>Which country has the highest population?</h6>
           <form class = "choices">
-            <input type="radio"> United States
-            <input type="radio" value="correct"> China
-            <input type="radio"> India
+            <input type="radio" name="q7"> United States
+            <input type="radio" name="q7" value="correct"> China
+            <input type="radio" name="q7"> India
             </form><br>
         </div>
         <div id="qEight">
           <h6>Who was the last emperor of Rome?</h6>
           <form class = "choices">
-            <input type="radio"> Nero
-            <input type="radio"> Caligula
-            <input type="radio" value="correct"> Romulus Augustulus
+            <input type="radio" name="q8"> Nero
+            <input type="radio" name="q8"> Caligula
+            <input type="radio" name="q8" value="correct"> Romulus Augustulus
           </form><br>
         </div>
         <div id="qNine">
           <h6>What year was the 50th state, Hawaii, admitted to the Union?</h6>
           <form class = "choices">
-            <input type="radio" value="correct"> 1959
-            <input type="radio"> 1953
-            <input type="radio"> 1960
+            <input type="radio" name="q9" value="correct"> 1959
+            <input type="radio" name="q9"> 1953
+            <input type="radio" name="q9"> 1960
           </form><br>
         </div>
         <div id="qTen">
           <h6>Which ocean is the largest by surface area?</h6>
           <form class = "choices">
-            <input type="radio"> Indian
-            <input type="radio" value="correct"> Pacific
-            <input type="radio"> Atlantic
+            <input type="radio" name="q10"> Indian
+            <input type="radio" name="q10" value="correct"> Pacific
+            <input type="radio" name="q10"> Atlantic
           </form><br>
         </div>
         <button id="submitButton">Submit</button><br>
