--- a/index.html
+++ b/index.html
@@ -25,40 +25,40 @@
         <div id="qOne">
           <h6>What country joined the United Nations in 2011 becoming the latest to do so?</h6>
           <form class = "choices">
-            <input type="radio" name="q1">  South Korea  
-            <input type="radio" name="q1">  Vietnam  
+            <input type="radio" name="q1" value="incorrect">  South Korea  
+            <input type="radio" name="q1" value="incorrect">  Vietnam  
             <input type="radio" name="q1" value="correct"> South Sudan  
           </form><br>
         </div>
         <div id="qTwo">
           <h6>On what day is the United Kingdom scheduled to leave the European Union?</h6>
           <form class = "choices">
-            <input type="radio" name="q2"> May 29th, 2019
-            <input type="radio" name="q2"value="correct"> March 29th, 2019
-            <input type="radio" name="q2"> December 31, 2019
+            <input type="radio" name="q2" value="incorrect"> May 29th, 2019
+            <input type="radio" name="q2" value="correct"> March 29th, 2019
+            <input type="radio" name="q2" value="incorrect"> December 31, 2019
           </form><br>
         </div>
         <div id="qThree">
           <h6>What year did the global population reach 7 billion?</h6>
           <form class = "choices">
-            <input type="radio" name="q3"> 2001
+            <input type="radio" name="q3" value="incorrect"> 2001
             <input type="radio" name="q3" value="correct"> 2011
-            <input type="radio" name="q3"> 1991
+            <input type="radio" name="q3" value="incorrect"> 1991
           </form><br>
         </div>
         <div id="qFour">
           <h6>How many current member states of the United Nations are there?</h6>
           <form class = "choices">
             <input type="radio" name="q4" value="correct"> 193
-            <input type="radio" name="q4"> 183
-            <input type="radio" name="q4"> 203
+            <input type="radio" name="q4" value="incorrect"> 183
+            <input type="radio" name="q4" value="incorrect"> 203
           </form><br>
         </div>
         <div id="qFive">
           <h6>Who is the current Prime Minister of the United Kingdom?</h6>
           <form class = "choices">
-            <input type="radio" name="q5"> David Cameron
-            <input type="radio" name="q5"> Sadiq Khan
+            <input type="radio" name="q5" value="incorrect"> David Cameron
+            <input type="radio" name="q5" value="incorrect"> Sadiq Khan
             <input type="radio" name="q5" value="correct"> Theresa May
             </form><br>
         </div>
@@ -66,23 +66,23 @@
           <h6>The Battle of the Bulge took place in which war?</h6>
           <form class = "choices">
             <input type="radio" name="q6" value="correct"> World War II
-            <input type="radio" name="q6"> World War I
-            <input type="radio" name="q6"> Vietman
+            <input type="radio" name="q6" value="incorrect"> World War I
+            <input type="radio" name="q6" value="incorrect"> Vietman
           </form><br>
         </div>
         <div id="qSeven">
           <h6>Which country has the highest population?</h6>
           <form class = "choices">
-            <input type="radio" name="q7"> United States
+            <input type="radio" name="q7" value="incorrect"> United States
             <input type="radio" name="q7" value="correct"> China
-            <input type="radio" name="q7"> India
+            <input type="radio" name="q7" value="incorrect"> India
             </form><br>
         </div>
         <div id="qEight">
           <h6>Who was the last emperor of Rome?</h6>
           <form class = "choices">
-            <input type="radio" name="q8"> Nero
-            <input type="radio" name="q8"> Caligula
+            <input type="radio" name="q8" value="incorrect"> Nero
+            <input type="radio" name="q8" value="incorrect"> Caligula
             <input type="radio" name="q8" value="correct"> Romulus Augustulus
           </form><br>
         </div>
@@ -90,16 +90,16 @@
           <h6>What year was the 50th state, Hawaii, admitted to the Union?</h6>
           <form class = "choices">
             <input type="radio" name="q9" value="correct"> 1959
-            <input type="radio" name="q9"> 1953
-            <input type="radio" name="q9"> 1960
+            <input type="radio" name="q9" value="incorrect"> 1953
+            <input type="radio" name="q9" value="incorrect"> 1960
           </form><br>
         </div>
         <div id="qTen">
           <h6>Which ocean is the largest by surface area?</h6>
           <form class = "choices">
-            <input type="radio" name="q10"> Indian
+            <input type="radio" name="q10" value="incorrect"> Indian
             <input type="radio" name="q10" value="correct"> Pacific
-            <input type="radio" name="q10"> Atlantic
+            <input type="radio" name="q10" value="incorrect"> Atlantic
           </form><br>
         </div>
         <button id="submitButton">Submit</button><br>
