made unansweredCounter work with removal of else statement, fixed numbers not resetting after pressing reset butting by declaring those integer variables as equalling zero upon reset press, game now works

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div id="qTwo">
           <h6>On what day is the United Kingdom scheduled to leave the European Union?</h6>
           <form class = "choices">
-            <input type="radio" name="q2" value="incorrect"> May 29th, 2019
-            <input type="radio" name="q2" value="correct"> March 29th, 2019
-            <input type="radio" name="q2" value="incorrect"> December 31, 2019
+            <input type="radio" name="q2" value="incorrect"> 5/29/19
+            <input type="radio" name="q2" value="correct"> 3/29/19
+            <input type="radio" name="q2" value="incorrect"> 12/31/19
           </form><br>
         </div>
         <div id="qThree">
