--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="gameScreen" id="quizContent">
         <p>Time Remaining: <span id="timeRemaining"></span></p>
         <div id="qOne">
-          <h6>What country joined the United Nations in 2011 becoming the latest to do so?</h6>
+          <h6>What country joined the United Nations in 2011?</h6>
           <form class = "choices">
             <input type="radio" name="q1" value="incorrect">  South Korea  
             <input type="radio" name="q1" value="incorrect">  Vietnam  
@@ -31,7 +31,7 @@
           </form><br>
         </div>
         <div id="qTwo">
-          <h6>On what day is the United Kingdom scheduled to leave the European Union?</h6>
+          <h6>On what day is the UK scheduled to leave the European Union?</h6>
           <form class = "choices">
             <input type="radio" name="q2" value="incorrect"> 5/29/19
             <input type="radio" name="q2" value="correct"> 3/29/19
@@ -47,7 +47,7 @@
           </form><br>
         </div>
         <div id="qFour">
-          <h6>How many current member states of the United Nations are there?</h6>
+          <h6>What is the current number of UN member states?</h6>
           <form class = "choices">
             <input type="radio" name="q4" value="correct"> 193
             <input type="radio" name="q4" value="incorrect"> 183
@@ -87,7 +87,7 @@
           </form><br>
         </div>
         <div id="qNine">
-          <h6>What year was the 50th state, Hawaii, admitted to the Union?</h6>
+          <h6>What year did the islands of Hawaii become a US state?</h6>
           <form class = "choices">
             <input type="radio" name="q9" value="correct"> 1959
             <input type="radio" name="q9" value="incorrect"> 1953
